[package]
name = "reclutch_core"
version = "0.0.0"
authors = ["jazzfool <saveuselon@gmail.com>"]
edition = "2018"
license = "MIT / Apache-2.0"
description = "Core components of Reclutch"
homepage = "http://github.com/jazzfool/reclutch/tree/master/core"
repository = "http://github.com/jazzfool/reclutch"

[features]
skia = ["skia-safe", "gl", "linked-hash-map"]

[dependencies]
reclutch_event = { path = "../event" }
euclid = "0.20"
thiserror = "1.0"
font-kit = "0.6"
palette = "0.5"
xi-unicode = "0.2"
skia-safe = { version = "0.27", optional = true, features = ["gl"] }
gl = { version = "0.14", optional = true }
linked-hash-map = { version = "0.5", optional = true }

[dev-dependencies]
float-cmp = "0.8"
