[package]
name = "reclutch_derive"
version = "0.0.0"
authors = ["jazzfool <saveuselon@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Utility to make implementing Widget children easier"
homepage = "http://github.com/jazzfool/reclutch/tree/master/derive"
repository = "http://github.com/jazzfool/reclutch"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
