[package]
name = "reclutch_event"
version = "0.0.0"
authors = ["jazzfool <saveuselon@gmail.com>", "Erik Zscheile <erik.zscheile@gmail.com>"]
edition = "2018"
license = "MIT / Apache-2.0"
description = "Thread-safe and non-thread-safe Event abstractions"
homepage = "http://github.com/jazzfool/reclutch/tree/master/event"
repository = "http://github.com/jazzfool/reclutch"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docs"]

[features]
futures = ["futures-core"]

[dependencies]
crossbeam-channel = { version = "0.4", optional = true }
futures-core = { version = "0.3", optional = true }
retain_mut = "0.1"
slotmap = "0.4"
# keep this in sync with the version listed in reclutch/Cargo.toml
winit = { version = "0.20.0-alpha5", optional = true }

[dev-dependencies]
criterion = "0.3"
crossbeam-utils = "0.7"
futures-executor = "0.3"
futures-util = "0.3"

[[bench]]
name = "events"
harness = false
