[package]
name = "reclutch"
version = "0.0.0"
authors = ["jazzfool <saveuselon@gmail.com>"]
edition = "2018"
license = "MIT / Apache-2.0"
description = "Rust UI Core"
homepage = "http://github.com/jazzfool/reclutch/tree/master/core"
repository = "http://github.com/jazzfool/reclutch"

[features]
default = ["reclutch_derive"]
skia = ["reclutch_core/skia"]

[dependencies]
reclutch_core = { path = "../core" }
reclutch_verbgraph = { path = "../verbgraph" }
reclutch_derive = { path = "../derive", optional = true }

[[example]]
name = "counter"
required-features = ["skia"]

[[example]]
name = "image_viewer"
required-features = ["skia"]

[[example]]
name = "opengl"
required-features = ["skia"]

[[example]]
name = "shaping"
required-features = ["skia"]

[dev-dependencies]
glium = "0.27"
nalgebra = "0.21"
harfbuzz_rs = "1.1"
rusttype = "0.9"
