[package]
name = "reclutch_event"
version = "0.0.0"
authors = ["jazzfool <saveuselon@gmail.com>", "Erik Zscheile <erik.zscheile@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Thread-safe and non-thread-safe Event abstractions"
homepage = "http://github.com/jazzfool/reclutch/tree/master/reclutch_event"
repository = "http://github.com/jazzfool/reclutch"

[dependencies]
slotmap = "0.4.0"

[dev-dependencies]
criterion = "0.3.0"

[[bench]]
name = "events"
harness = false
